# JsonIQ

./: README.md  pyproject.toml  setup.cfg  setup.py
src/: __init__.py  matcher.py  query.py
