[metadata]
name = jsoniq
version = 0.1
author = Ahmed Mansy
author_email = ahmed.mansy996@gmail.com
description = Query over Json file
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mansy996/JsonIQ
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src